<resources>
    <string name="app_name">Walk Me Home</string>


    <!-- DUMMY TEXT -->
    <string name="short_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>
    <string name="medium_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="long_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="longer_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>

    <!-- TITLE -->
    <string name="main_title">Walk Me Home</string>
    <string name="login_title">Sign In</string>
    <string name="create_user_title">Create An Account</string>
    <string name="signin_title">Sign In</string>
    <string name="register_with_email_title">Register With Email</string>
    <string name="signin_with_email_title">Sign Up With Email</string>
    <string name="watch_over_me_title">Who Can Walk With Me</string>
    <string name="watch_over_someone_title">Who Can I Walk Home</string>
    <string name="watch_over_me_send_invitation">Send An Invitation</string>
    <string name="activate_invitation">Invitation Profil</string>
    <string name="modify_watcher_title">Modify Profil</string>
    <string name="modify_watching_title">Modify Profil</string>

    <!-- LIST HEADER -->
    <string name="watchers_header">People who can walk you home</string>
    <string name="watchers_list_empty">Your list is empty, start by sending an invitation to someone you know to had him to your list. Untill he accept, the invitation will remain in the "<i>pending invitations</i>" list below</string>
    <string name="invitations_header">Pending Invitations</string>
    <string name="invitations_list_empty">You have no pending invitation.</string>
    <string name="watchings_header">People you can walk home</string>
    <string name="watchings_list_empty">Your list is empty, if you have received a code by SMS or other, enter it in the box above and press activate.</string>


    <!-- DESCRIPTION -->
    <string name="create_user_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="create_user_with_email_description">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="signin_user_description">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="send_invitation_description">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="activate_invitation_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</string>

    <!-- IMAGE DESCRIPTION -->
    <string name="image_icon_person">icon person</string>
    <string name="image_menu_options">menu options</string>

    <!-- COPYRIGHT -->
    <string name="txt_copyright">TheWalkGuard @ 2018</string>

    <!-- BUTTON -->
    <string name="butt_create_signin">Create Account</string>
    <string name="butt_signin">Sign In</string>
    <string name="butt_create_from_email">Register with email</string>
    <string name="butt_signin_from_email">Sign up with email</string>
    <string name="butt_next">Next</string>
    <string name="butt_register">Register</string>
    <string name="butt_watch_over_someone">Who Can I Walk Home</string>
    <string name="butt_watch_over_me">Who Can Walk With Me</string>
    <string name="butt_watch_current">Current Traject</string>
    <string name="butt_watch_start_new_traject">Start New Traject</string>
    <string name="butt_settings">Settings</string>
    <string name="butt_cancel">Cancel</string>
    <string name="butt_send_invitation">Send Sms Invitation</string>
    <string name="butt_select_from_contacts">Select From Your Contacts</string>
    <string name="butt_enter_phone_number">Enter It Manually</string>
    <string name="butt_generate_code_only">Generate Code</string>
    <string name="butt_validate">Validate</string>
    <string name="butt_activate">Activate</string>
    <string name="butt_save">Save</string>


    <!-- INPUT FIELD HINT -->
    <string name="email_hint">Email</string>
    <string name="psw_hint">Password</string>
    <string name="psw_hint_2">Retype Password</string>
    <string name="name_hint">Name</string>
    <string name="phone_hint">Phone number</string>
    <string name="activate_hint">Invitation ID</string>
    <string name="validate_hint">Enter Invitation Code</string>
    <string name="invitation_message_hint">Your invitation message here</string>
    <string name="nickname_hint">Nickname</string>

    <!-- ERR MESSAGE -->
    <string name="err_nickname_invalid">the name is invalid</string>
    <string name="err_email_invalid">the email is invalid</string>
    <string name="err_psw_too_short">the password is too short</string>
    <string name="err_psw_not_the_same">the two passwords must be identical</string>
    <string name="err_psw_weak">the password is weak</string>
    <string name="err_invalid_credential">invalid credential</string>
    <string name="err_invalid_password">invalid password</string>
    <string name="err_no_connectivity">no internet connection available</string>
    <string name="err_no_name">You need to provide a nickname</string>
    <string name="err_no_phone">You need to provide a phone number</string>
    <string name="err_no_message">You need to provide a little welcome message!</string>
    <string name="err_sms_not_sent">The message was not sent, please try again!</string>
    <string name="err_sms_send_permission">You have to enable permission of sending this SMS message to continue.</string>
    <string name="err_invalid_invite_id">The ID you entered is not valid.</string>
    <string name="err_invalid_invite_id_failure">Woops!!! An error occurred during the activation</string>
    <string name="err_invalid_invite_code">This code is not valid</string>
    <string name="err_invalid_invite_code_failure">Woops!!! An error occurred during the validation</string>
    <string name="err_invalid_invite_infos_failure">Woops!!! An error occurred during the activation</string>

    <!-- EMPTY FIELDS -->
    <string name="empty_email">no email</string>
    <string name="empty_phone">no phone</string>
    <string name="empty_name">no name</string>

    <!-- TEXT -->
    <string name="or"> OR </string>
    <string name="code">Code: %1$s</string>

    <!-- DIALOG MESSAGE -->
    <string name="dialog_loading">in progress</string>
    <string name="dialog_login_out">Please wait! Login Out...</string>

    <!-- TOAST MESSAGE -->
    <string name="toast_connected_as">connected as %1$s</string>
    <string name="toast_connected_as_and_last">connected as %1$s last time at %2$s</string>
    <string name="toast_signed_out">you are are signed out</string>
    <string name="toast_sms_sent">The message has been sent</string>
    <string name="toast_sms_not_sent">The message was not sent, please try again!...</string>

    <!-- FIREBASE ERROR -->
    <string name="email_in_use">this email is already registered</string>

    <!-- ACTION MENU -->
    <string name="menu_action_settings">Settings</string>
    <string name="menu_action_logout">Sign Out</string>
    <string name="menu_action_about">About</string>

    <!-- SUB MENU -->
    <string name="menu_delete_watching_item">Remove Walking With</string>
    <string name="menu_modify_watching_item">Modify Informations</string>
    <string name="menu_delete_watcher_item">Remove Walker</string>
    <string name="menu_modify_watcher_item">Modify Informations</string>
    <string name="menu_delete_invitation_item">Remove Invitation</string>

    <!-- FACEBOOK LOGIN -->
    <string name="facebook_app_id">135994336994028</string>
    <string name="fb_login_protocol_scheme">fb135994336994028</string>

    <!-- HOMEPAGE -->
    <string name="home_title">Walk Me Home</string>

    <!-- ALERT GPS -->
    <string name="alert_gps_title">GPS settings</string>
    <string name="alert_gps_content">GPS is not enabled. Do you want to go to settings menu?</string>

    <!-- SMS INVIATATION TEMPLATE -->
    <string name="sms_invitation_title">The message below will be sent to %1$s</string>
    <string name="sms_invitation_message">%1$s. You have receive an invitation. Enter this id: %2$s in the mobile application to start helping.</string>

</resources>
